Desarrollo de Core e Infrastructure

--- a/books-lumik.Infrastructure/books-lumik.Infrastructure.csproj
+++ b/books-lumik.Infrastructure/books-lumik.Infrastructure.csproj
@@ -5,4 +5,17 @@
     <RootNamespace>books_lumik.Infrastructure</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\books-api.Core\books-lumik.Core.csproj" />
+  </ItemGroup>
+
 </Project>
