--- a/books-lumik/books-lumik.Api.csproj
+++ b/books-lumik/books-lumik.Api.csproj
@@ -5,5 +5,14 @@
     <RootNamespace>books_lumik</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\books-lumik.Infrastructure\books-lumik.Infrastructure.csproj" />
+  </ItemGroup>
+
 
 </Project>
