Implementado las funcionalidades de los controladores

--- a/books-lumik.Infrastructure/books-lumik.Infrastructure.csproj
+++ b/books-lumik.Infrastructure/books-lumik.Infrastructure.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\books-api.Core\books-lumik.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
